# lightning-lab

./: .gitignore  .gitpod.yml  .lightning  .lightningignore  .pre-commit-config.yaml  404.html  LICENSE  MANIFEST.in  README.md  app.py  dash_app.py  environment.yml  index.html  install_beta.sh  mkdocs.yml  objects.inv  pyproject.toml  react_app.py  requirements.txt  setup.cfg  setup.py  wandb_run.py
.circleci/: config.yml
.devcontainer/: devcontainer.json
.github/workflows/: sphinx.yml
.lightningai/: 01-README.md
academic_paper/: 01-README.md  README.md  ieee_conference_template.aux  ieee_conference_template.fdb_latexmk  ieee_conference_template.fls
assets/: styles.css
components/: ui.py
docs/: .meta.yml  build_docs.sh  index.md
docs/reference/: core.md  pipeline.md
docs/source/: conf.py  index.rst  lightning_agents.agents.goal_based.rst  lightning_agents.agents.learning_agents.linear.rst  lightning_agents.agents.learning_agents.rst  lightning_agents.agents.linear.rst  lightning_agents.agents.model_based.rst  lightning_agents.agents.rst  lightning_agents.agents.simple_reflex.rst  lightning_agents.agents.utility_based.rst  lightning_agents.pipeline.rst  lightning_agents.rst  lightning_pod.network.rst  lightning_pod.pipeline.rst  lightning_pod.rst  modules.rst
examples/: README.md  optuna.py  wandb.py  wandb_run.py
examples/hydra/: trainer.py  trainer.yaml
lightning_agents/pipeline/: datamodule.py  modelhub.py
lightning_pod/: conf.py  trainer.py
lightning_pod/agents/: __init__.py  hydra_trainer.py  static_trainer.py  trainer.py  trainer_config.yaml
lightning_pod/cli/: README.md  bugreport.py  console.py  lightningpod_cli.py  pod.py  pod_cli.py  utils.py
lightning_pod/components/: ui.py
lightning_pod/core/: README.md  module.py  trainer.py  trainer.yaml
lightning_pod/fabric/: README.md
lightning_pod/flows/: optuna_flow.py  sweep.py  wandb_flow.py
lightning_pod/network/: hydra_config.yaml  hydra_trainer.py  module.py  static_trainer.py
lightning_pod/pipeline/: datamodule.py  dataset.py
lightning_pod/utils/: __init__.py  _teardown.py  build.py  paths.py  set_project_name.py  teardown.py
logs/profiler/: fit-profiler-[Strategy]SingleDeviceStrategy.training_step.1654167162900.pt.trace.json  fit-profiler-[Strategy]SingleDeviceStrategy.training_step.1654187067367.pt.trace.json  fit-profiler-[Strategy]SingleDeviceStrategy.training_step.1654630837459.pt.trace.json  fit-profiler-[Strategy]SingleDeviceStrategy.training_step.1655731130119.pt.trace.json  fit-profiler-[Strategy]SingleDeviceStrategy.training_step.1655896838196.pt.trace.json  fit-profiler-[Strategy]SingleDeviceStrategy.training_step.1655994062121.pt.trace.json  fit-profiler-[Strategy]SingleDeviceStrategy.training_step.1655999105733.pt.trace.json  fit-profiler-[Strategy]SingleDeviceStrategy.training_step.1656083181582.pt.trace.json  fit-profiler-[Strategy]SingleDeviceStrategy.validation_step.1654167283334.pt.trace.json  fit-profiler-[Strategy]SingleDeviceStrategy.validation_step.1654187187394.pt.trace.json  fit-profiler-[Strategy]SingleDeviceStrategy.validation_step.1654630957247.pt.trace.json  fit-profiler-[Strategy]SingleDeviceStrategy.validation_step.1655731243970.pt.trace.json  fit-profiler-[Strategy]SingleDeviceStrategy.validation_step.1655896956747.pt.trace.json  fit-profiler-[Strategy]SingleDeviceStrategy.validation_step.1655994175435.pt.trace.json  fit-profiler-[Strategy]SingleDeviceStrategy.validation_step.1655999226492.pt.trace.json  fit-profiler-[Strategy]SingleDeviceStrategy.validation_step.1656083292371.pt.trace.json  fit-profiler.txt  predict-profiler-[Strategy]SingleDeviceStrategy.predict_step.1654189953258.pt.trace.json  predict-profiler-[Strategy]SingleDeviceStrategy.predict_step.1654633503356.pt.trace.json  predict-profiler-[Strategy]SingleDeviceStrategy.predict_step.1655735287531.pt.trace.json  predict-profiler-[Strategy]SingleDeviceStrategy.predict_step.1655899522886.pt.trace.json  predict-profiler-[Strategy]SingleDeviceStrategy.predict_step.1655996683299.pt.trace.json  predict-profiler-[Strategy]SingleDeviceStrategy.predict_step.1656001702382.pt.trace.json  predict-profiler-[Strategy]SingleDeviceStrategy.predict_step.1656083829538.pt.trace.json  predict-profiler.txt  test-profiler-[Strategy]SingleDeviceStrategy.test_step.1654167838304.pt.trace.json  test-profiler-[Strategy]SingleDeviceStrategy.test_step.1654189943249.pt.trace.json  test-profiler-[Strategy]SingleDeviceStrategy.test_step.1654633493722.pt.trace.json  test-profiler-[Strategy]SingleDeviceStrategy.test_step.1655735278007.pt.trace.json  test-profiler-[Strategy]SingleDeviceStrategy.test_step.1655899513205.pt.trace.json  test-profiler-[Strategy]SingleDeviceStrategy.test_step.1655996673562.pt.trace.json  test-profiler-[Strategy]SingleDeviceStrategy.test_step.1656001693201.pt.trace.json  test-profiler-[Strategy]SingleDeviceStrategy.test_step.1656083820440.pt.trace.json  test-profiler.txt
logs/tensorbaord/: README.md
logs/torch_profiler/: fit-profiler-[Strategy]SingleDeviceStrategy.training_step.1656515811621.pt.trace.json  fit-profiler-[Strategy]SingleDeviceStrategy.validation_step.1656515921234.pt.trace.json  fit-profiler.txt  predict-profiler-[Strategy]SingleDeviceStrategy.predict_step.1656516450863.pt.trace.json  predict-profiler.txt  test-profiler-[Strategy]SingleDeviceStrategy.test_step.1656516441903.pt.trace.json  test-profiler.txt
logs/wandb_logs/: README.md
models/checkpoints/: 01-README.md  model-v1.ckpt  model.ckpt
models/production/: model.onnx
notebooks/: exploratory-data-analysis.ipynb  math-concepts.ipynb  model-summary.ipynb  prediction-from-checkpoints.ipynb
reactui/: index.html  package.json
reactui/src/: App.css  App.tsx  main.tsx
reference/core/: index.html
reference/pipeline/: index.html
requirements/: base.txt  devel.txt  docs.txt  extras.txt  plotly.txt
search/: search_index.json
src/lab/: config.py  datamodule.py  module.py  trainer.py
src/lightninglab/: conf.py
src/studiolab/: datamodule.py  (+1 more)
tests/: test_datamodule.py  test_module.py  test_network_module.py
(+84 files in other folders)
