# See
# https://github.com/Lightning-AI/lightning/blob/master/pyproject.toml
# https://mypy.readthedocs.io/en/stable/

[build-system]
requires = [
    "setuptools",
    "wheel",
]

[tool.isort]
known_first_party = [
    "lightning_pod"
]
profile = "black"
line_length = 120
force_sort_within_sections = "False"
order_by_type = "False"

[tool.black]
line-length = 120

[tool.mypy]
files = ["lightning_pod"]
install_types = "True"
non_interactive = "True"
disallow_untyped_defs = "True"
ignore_missing_imports = "True"
show_error_codes = "True"
warn_redundant_casts = "True"
warn_unused_configs = "True"
warn_unused_ignores = "True"
allow_redefinition = "True"
# disable this rule as the Trainer attributes are defined in the connectors, not in its __init__
disable_error_code = "attr-defined"
# style choices
warn_no_return = "False"

# do not add type hints to lightnig_pod/cli/seed/
[[tool.mypy.overrides]]
module = [
    "lightning_pod.cli.seed.core.module",
    "lightning_pod.cli.seed.core.trainer",
    "lightning_pod.cli.seed.pipeline.datamodule",
    "lightning_pod.cli.seed.pipeline.dataset",
]
ignore_errors = "True"
