# Copyright Justin R. Goheen.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[tool.poetry]
name = "lightning-pod"
version = "0.0.5"
description = "A Research Template for the Lightning.ai Ecosystem"
authors = ["Justin R. Goheen"]
license = "Apache-2.0"
readme = "README.md"
homepage="https://github.com/JustinGoheen/lightning-pod"

classifiers=[
    "Environment :: Console",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

include = [
    "*.cff"
]

exclude = [
    "*.toml",
    "requirements.txt",
    "__pycache__",
    "*.lightningai",
    "*.circleci",
    "*.devcontainer",
    "*.github",
    ".gitpod.yml",
]

[tool.poetry.scripts]
pod = "lightning_pod.cli.console:main"

[tool.poetry.dependencies]
python = "3.9"
lightning = ">=2022.8.2"
pytorch-lightning = ">=1.7.0"
lightning-app = ">=0.5.4"
lightning-hpo = { git = "https://github.com/Lightning-AI/lightning-hpo.git" }
torchmetrics = ">=0.9.3"
torch = ">=1.12.1"
torchvision = ">=0.13.1"
optuna = ">=2.10.1"
wandb = ">=0.13.1"
torch-tb-profiler = ">=0.4.0"
click = ">=8.1.3"
hydra-core = ">=1.2.0"
rich = ">=12.5.1"
rich-cli = ">=1.8.0"
plotly = ">=5.9.0"
dash = ">=2.6.1"
dash-bootstrap-components = ">=1.2.1"
gunicorn = ">=20.1.0"
matplotlib = ">=3.5.2"

[tool.poetry.dev-dependencies]
black = ">=22.1.0"
flake8 = ">=5.0.4"
pytest = ">=7.1.2"
mypy = ">=0.971"
coverage = ">=6.4.3"
pre-commit = ">=2.20.0"
isort = ">=5.10.1"

[tool.poetry.extras]
lightningos = [
    "lightning",
    "lightning-flash",
    "lightning-bolts",
    "lightning-transformers",

]
text = [
    "lightning-transformers",
    "torchtext"
]
audio = ["torchaudio"]
vision = ["torchvision"]
all = [
    "lightning",
    "lightning-flash",
    "lightning-bolts",
    "lightning-transformers",
    "torchtext",
    "torchaudio",
    "torchvision",
    "black>=22.1.0",
    "flake8>=5.0.4",
    "pytest>=7.1.2",
    "mypy>=0.971",
    "coverage>=6.4.3",
    "pre-commit>=2.20.0",
    "isort>=5.10.1",
    "torchmetrics>=0.9.3",
    "torch>=1.12.1",
    "torchvision>=0.13.1",
    "optuna>=2.10.1",
    "wandb>=0.13.1",
    "torch-tb-profiler>=0.4.0",
    "click>=8.1.3",
    "hydra-core>=1.2.0",
    "rich>=12.5.1",
    "rich-cli>=1.8.0",
    "plotly>=5.9.0",
    "dash>=2.6.1",
    "dash-bootstrap-components>=1.2.1",
    "gunicorn>=20.1.0",
    "matplotlib"
]


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120

[flake8]
max-line-length = 120

[tool.isort]
known_first_party = [
    "lightning_pod",
    "lightning",
    "lightning_app",
    "pytorch_lightning",
]
profile = "black"
line_length = 120
force_sort_within_sections = "False"
order_by_type = "False"

[tool.mypy]
files = ["lightning_pod"]
install_types = "True"
non_interactive = "True"
disallow_untyped_defs = "True"
ignore_missing_imports = "True"
show_error_codes = "True"
warn_redundant_casts = "True"
warn_unused_configs = "True"
warn_unused_ignores = "True"
allow_redefinition = "True"
# disable this rule as the Trainer attributes are defined in the connectors, not in its __init__
disable_error_code = "attr-defined"
# style choices
warn_no_return = "False"

# do not add type hints to lightnig_pod/cli/seed/ or core.module
# because lightning already defines types
[[tool.mypy.overrides]]
module = [
    "lightning_pod.core.module",
    "lightning_pod.cli.seed.core.module",
    "lightning_pod.cli.seed.core.trainer",
    "lightning_pod.cli.seed.pipeline.datamodule",
    "lightning_pod.cli.seed.pipeline.dataset",
]
ignore_errors = "True"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
norecursedirs = [
    ".git",
    ".github",
    ".circleci",
    "*.egg-info"
]
addopts = "--disable-pytest-warnings"
filterwarnings = [
    #  IGNORE THIRD PARTY LIBRARY WARNINGS
    # ignore tensorboard proto warnings
    "ignore: Call to deprecated*",
    # ignore torchvision transform warning
    "ignore: .* and will be removed in Pillow 10",
    # ignore torch distributed warning
    "ignore: torch.distributed*.",
    # ignore PL UserWarning
    "ignore: You are trying to `self.log()`*"
]

[tool.coverage.run]
disable_warnings = "couldnt-parse"

[tool.coverage.report]
ignore_errors = "True"
exclude_lines = "pragma: no cover"
