[options]
install_requires =
    # pytorch lightning, lightning app, torchmetrics, pytorch core
    lightning
    # hyperparameter optimization
    lightning_hpo @ git+https://github.com/Lightning-AI/lightning-hpo.git
    # mnist data
    torchvision
    # lightning-hpo dependency
    optuna
    # experiment manager
    wandb
    # tensorboard support for pytorch profiler
    torch-tb-profiler
    # pod-cli support
    click
    hydra-core
    # plotly dash apps
    plotly
    dash
    dash-bootstrap-components
    gunicorn
    # FORMMATING, LINTING, TESTING, STATIC TYPE CHECKING, COVERAGE
    black
    flake8
    pytest
    mypy
    coverage
    pre-commit
    isort

[flake8]
max-line-length = 120
extend-ignore = E203

[tool:pytest]
norecursedirs =
    .git
    .github
    .circleci
    *.egg-info
addopts =
    --disable-pytest-warnings
filterwarnings =
    #  IGNORE THIRD PARTY LIBRARY WARNINGS
    # ignore tensorboard proto warnings
    ignore: Call to deprecated*
    # ignore torchvision transform warning
    ignore: .* and will be removed in Pillow 10
    # ignore torch distributed warning
    ignore: torch.distributed*.
    # ignore PL UserWarning
    ignore: You are trying to `self.log()`*

[coverage:run]
disable_warnings = couldnt-parse

[coverage:report]
ignore_errors = True
exclude_lines = pragma: no cover
