# Copyright Justin R. Goheen.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[options]
install_requires =
    # pytorch lightning, lightning app, torchmetrics, pytorch core
    lightning
    # hyperparameter optimization
    lightning_hpo @ git+https://github.com/Lightning-AI/lightning-hpo.git
    # mnist data
    torchvision
    # lightning-hpo dependency
    optuna
    # experiment manager
    wandb
    # tensorboard support for pytorch profiler
    torch-tb-profiler
    # pod-cli support
    click
    hydra-core
    # plotly dash apps
    plotly
    dash
    dash-bootstrap-components
    gunicorn
    # FORMMATING, LINTING, TESTING, STATIC TYPE CHECKING, COVERAGE
    black
    flake8
    pytest
    mypy
    coverage
    pre-commit
    isort

[flake8]
max-line-length = 120
extend-ignore = E203

[tool:pytest]
norecursedirs =
    .git
    .github
    .circleci
    *.egg-info
addopts =
    --disable-pytest-warnings
filterwarnings =
    #  IGNORE THIRD PARTY LIBRARY WARNINGS
    # ignore tensorboard proto warnings
    ignore: Call to deprecated*
    # ignore torchvision transform warning
    ignore: .* and will be removed in Pillow 10
    # ignore torch distributed warning
    ignore: torch.distributed*.
    # ignore PL UserWarning
    ignore: You are trying to `self.log()`*

[coverage:run]
disable_warnings = couldnt-parse

[coverage:report]
ignore_errors = True
exclude_lines = pragma: no cover
